--- a/diabetes_type1_type2/prediction.ipynb
+++ b/diabetes_type1_type2/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,12 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score,confusion_matrix,classification_report\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pickle"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +206,7 @@
        "[1009 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +229,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +528,7 @@
        "[1009 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,20 +637,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 1.0\n"
+      "Accuracy: 1.0\n",
+      "Confusion Matrix:\n",
+      "[[133   0   0]\n",
+      " [  0  38   0]\n",
+      " [  0   0  31]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       133\n",
+      "           1       1.00      1.00      1.00        38\n",
+      "           2       1.00      1.00      1.00        31\n",
+      "\n",
+      "    accuracy                           1.00       202\n",
+      "   macro avg       1.00      1.00      1.00       202\n",
+      "weighted avg       1.00      1.00      1.00       202\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(\"Accuracy:\", accuracy)"
+    "confusion_mat = confusion_matrix(y_test, y_pred)\n",
+    "classification_rep = classification_report(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Confusion Matrix:\\n{confusion_mat}\")\n",
+    "print(f\"Classification Report:\\n{classification_rep}\")"
    ]
   },
   {
@@ -683,14 +703,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 1.0\n"
+      "Accuracy: 1.0\n",
+      "Confusion Matrix:\n",
+      "[[133   0   0]\n",
+      " [  0  38   0]\n",
+      " [  0   0  31]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       133\n",
+      "           1       1.00      1.00      1.00        38\n",
+      "           2       1.00      1.00      1.00        31\n",
+      "\n",
+      "    accuracy                           1.00       202\n",
+      "   macro avg       1.00      1.00      1.00       202\n",
+      "weighted avg       1.00      1.00      1.00       202\n",
+      "\n"
      ]
     }
    ],
@@ -705,7 +740,26 @@
     "\n",
     "# Calculate the accuracy of the model\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(\"Accuracy:\", accuracy)"
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "confusion_mat = confusion_matrix(y_test, y_pred)\n",
+    "classification_rep = classification_report(y_test, y_pred)\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Confusion Matrix:\\n{confusion_mat}\")\n",
+    "print(f\"Classification Report:\\n{classification_rep}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_filename = 'diabetes_type1_type2.pkl'\n",
+    "with open(model_filename, 'wb') as file:\n",
+    "    pickle.dump(rf_classifier, file)"
    ]
   },
   {
